[package]
name = "executor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool", "postgres"]

[dependencies]
diesel = { version = "1.4.4", features = ["uuidv07", "extras", "postgres"] }
rocket = "0.5.0-rc.1"
rocket_contrib = { version = "0.4.10", default-features = false, features = ["json", "uuid"] }
