(melange.emit
 (runtime_deps ui/index.html ui/src/style.css ui/src/tailwind.css)
 (package executor)
 (promote (until-clean))
 (target lib)
 (libraries executor ui common)
 (module_systems
  (es6 mjs))
 (preprocess
  (pps melange.ppx)))

(alias
 (name melange)
 (deps
  (source_tree lib)))

(dirs common executor ui \ node_modules)
