(melange.emit
 (runtime_deps ui/index.html ui/src/style.css ui/src/tailwind.css)
 (package executor)
 (promote (until-clean))
 (target lib)
 (libraries executor ui common)
 (module_systems
  (es6 mjs))
 (preprocess
  (pps melange.ppx)))

(rule
 (targets melange)
 (deps
  (source_tree .)
  build.js)
 (action
  (progn
   (system "bun build.js"))))

(alias
 (name melange)
 (deps
  (source_tree .)))

(dirs common executor ui \ node_modules)
